--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Swap</string>
     <string name="home">Home</string>
     <string name="profile">Profile</string>
-    <string name="review">Review</string>
+    <string name="chat">Chat</string>
     <string name="library">Library</string>
     <string name="app_name_caps">SWAP</string>
 
